josh/jenkins-41833-new-table-migration-2 * Finish up a simple story test for column filter, and remove the hack that fixed scrolling behaviour because it breaks in overflow:hidden

--- a/blueocean-dashboard/src/main/less/forms/column-filter.less
+++ b/blueocean-dashboard/src/main/less/forms/column-filter.less
@@ -115,25 +115,13 @@
         background-color: #e3ebee;
     }
 
-    .absolute() { // override the local styles for the drop-down container
-        position: absolute;
-        top: 100%;
-        left: 0;
-        min-width: 100%;
-        max-width: 200%;
-        max-height: 20em;
-        padding: 0;
-    }
-
     > div > div { // drop-down container
-        background: #f4f;
+        background: #fff;
         margin-top: -1px;
         border: 1px solid #4a90e2;
         border-radius: 0 0 3px 3px;
         z-index: 1000;
         box-shadow: 0 1px 6px rgba(0, 0, 0, 0.25);
-
-        //.absolute() !important; // ick
     }
 }
 
